--- a/outfitry/myapp/templates/myapp/community.html
+++ b/outfitry/myapp/templates/myapp/community.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -55,7 +54,7 @@
       font-weight: 800;
       min-width: 0;
       margin-left: -12px;
-      
+
     }
 
     .nav-logo {
@@ -449,11 +448,11 @@
         <a href="/content/">📄<span data-translate="content">Content</span></a>
         <a href="/community/" class="active">👥<span data-translate="community">Community</span></a>
         <a href="/custom/">🧵<span data-translate="custom">Custom</span></a>
-        <a href="/pricing/">💰<span data-translate="pricing">Pricing</a>
+        <a href="/price/">💰<span data-translate="pricing">Pricing</a>
       </div>
       <div class="nav-right">
         <a href="/login/" data-translate="login">Login</a>
-        <a href="#" class="cta" data-translate="cta">Get Outfitry Free</a>
+        <a href="/signup/" class="cta" data-translate="cta">Get Outfitry Free</a>
         <select class="lang-select" aria-label="Select language" onchange="changeLanguage(this.value)">
           <option value="en">English</option>
           <option value="th">ไทย</option>
