--- a/outfitry/myapp/templates/myapp/Fashionista.html
+++ b/outfitry/myapp/templates/myapp/Fashionista.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -586,7 +587,7 @@
             </div>
             <div class="nav-right">
                 <a href="/login/" data-translate="login">Login</a>
-                <a href="#" class="cta" data-translate="cta">Get Outfitry Free</a>
+                <a href="/signup/" class="cta" data-translate="cta">Get Outfitry Free</a>
                 <select class="lang-select" aria-label="Select language" onchange="changeLanguage(this.value)">
                     <option value="en">English</option>
                     <option value="th">ไทย</option>
