--- a/outfitry/myapp/templates/myapp/login.html
+++ b/outfitry/myapp/templates/myapp/login.html
@@ -13,12 +13,12 @@
   <div class="login-container">
     <h2>Welcome back to <span class="brand">Outfitry</span></h2>
     <p class="subtext">Login to your account</p>
-    
+
     <form class="login-form" action="#" method="post">
-      {% csrf_token %}
       <label for="email">Email</label>
       <input type="email" id="email" name="email" placeholder="you@example.com" required />
-
+      {% csrf_token %}
+      {{ form.as_p }}
       <label for="password">Password</label>
       <input type="password" id="password" name="password" placeholder="Enter your password" required />
 
@@ -26,15 +26,14 @@
     </form>
    <p class="or-divider">or</p>
 
-<a href="{% provider_login_url 'google' %}" class="google-login-btn">
-  <img src="{% static 'images/google-icon.jpg' %}" alt="Google logo" style="height: 20px; vertical-align: middle; margin-right: 8px;">
-  Continue with Google
-</a>
+  <a href="{% provider_login_url 'google' %}" class="google-login-btn">
+    <img src="{% static 'images/google-icon.jpg' %}" alt="Google logo" style="height: 20px; vertical-align: middle; margin-right: 8px;">
+    Continue with Google
+  </a>
 
-<p class="signup-text">
-  Don’t have an account? <a href="/signup/">Sign up here</a>
-</p>
-
+  <p class="signup-text">
+    Don’t have an account? <a href="/signup/">Sign up here</a>
+  </p>
   </div>
 </body>
 </html>
