--- a/outfitry/myapp/templates/content/poweroutfit.html
+++ b/outfitry/myapp/templates/content/poweroutfit.html
@@ -579,7 +579,7 @@
         <!-- Comment 1 -->
         <div class="comment-card bg-gray-50 rounded-lg p-6 mb-4 slide-in" data-comment-id="1">
           <div class="flex gap-4">
-            <img src="images/user9.jpg" alt="ConfidentSarah Profile" class="w-12 h-12 rounded-full comment-avatar">
+            <img src="{% static 'images/user9.jpg' %}" alt="ConfidentSarah Profile" class="w-12 h-12 rounded-full comment-avatar">
             <div class="flex-1">
               <div class="flex justify-between items-start">
                 <div>
@@ -606,7 +606,7 @@
         <!-- Comment 2 -->
         <div class="comment-card bg-gray-50 rounded-lg p-6 mb-4 slide-in" data-comment-id="2">
           <div class="flex gap-4">
-            <img src="images/user8.jpg" alt="BoldMiguel Profile" class="w-12 h-12 rounded-full comment-avatar">
+            <img src="{% static 'images/user8.jpg' %}" alt="BoldMiguel Profile" class="w-12 h-12 rounded-full comment-avatar">
             <div class="flex-1">
               <div class="flex justify-between items-start">
                 <div>
@@ -633,7 +633,7 @@
         <!-- Comment 3 -->
         <div class="comment-card bg-gray-50 rounded-lg p-6 mb-4 slide-in" data-comment-id="3">
           <div class="flex gap-4">
-            <img src="images/user7.jpg" alt="StyleSeeker Profile" class="w-12 h-12 rounded-full comment-avatar">
+            <img src="{% static 'images/user7.jpg' %}" alt="StyleSeeker Profile" class="w-12 h-12 rounded-full comment-avatar">
             <div class="flex-1">
               <div class="flex justify-between items-start">
                 <div>
