--- a/outfitry/myapp/templates/content/colortone.html
+++ b/outfitry/myapp/templates/content/colortone.html
@@ -584,7 +584,7 @@
         <!-- Comment 1 -->
         <div class="comment-card bg-gray-50 rounded-lg p-6 mb-4 slide-in" data-comment-id="1">
           <div class="flex gap-4">
-            <img src="images/user1.jpg" alt="ColorDoctor Profile" class="w-12 h-12 rounded-full comment-avatar">
+            <img src="{% static 'images/user1.jpg' %}" alt="ColorDoctor Profile" class="w-12 h-12 rounded-full comment-avatar">
             <div class="flex-1">
               <div class="flex justify-between items-start">
                 <div>
@@ -611,7 +611,7 @@
         <!-- Comment 2 -->
         <div class="comment-card bg-gray-50 rounded-lg p-6 mb-4 slide-in" data-comment-id="2">
           <div class="flex gap-4">
-            <img src="images/user2.jpg" alt="PrettyColor Profile" class="w-12 h-12 rounded-full comment-avatar">
+            <img src="{% static 'images/user2.jpg' %}" alt="PrettyColor Profile" class="w-12 h-12 rounded-full comment-avatar">
             <div class="flex-1">
               <div class="flex justify-between items-start">
                 <div>
